Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17710

Invalid jobid with "%H" (short hostname)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0, Lustre 2.15.5
    • Lustre 2.12.9
    • None
    • 3
    • 9223372036854775807

      jobid_name="%H" seems to be racy.
      We observed malformed jobid on OST side:

      jobid_name="%H.%u.%g"
      
      On OST jobstats:
      login13.0.st.fr
      

      We also see some errors:

      kernel: LustreError: 8537:0:(lprocfs_jobstats.c:283:lprocfs_job_stats_log()) Invalid jobid size (37), expect(32)
      

            eaujames Etienne Aujames
            eaujames Etienne Aujames
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: